Added a bit of functionality

--- a/index.html
+++ b/index.html
@@ -34,15 +34,28 @@
       <p>Capture all those magical moments with our new KIEV Camera</p>
     </div>
     <div class="cta">
-      <button class="cta-select">2022 Model</button>
-      <button class="cta-add">Add to cart</button>
+      <button id="cart" class="cta-add">Buy Now</button>
+      <button id="gallery" class="cta-select">Gallery</button>
     </div>
   </div>
   <div class="cover">
     <img src="camera-removebg-preview.png" alt="product photo">
   </div>
 </section>
+<div id="myModal" class="modal">
+
+  <!-- Modal content -->
+  <div class="modal-content" style="background-color: white;">
+    <span class="close">&times;</span>
+    <div class="verified">
+    <img src="verified.png" alt="verified">
+    </div>
+    <p>Added to cart</p>
+  </div>
+
+</div>
   </main>
+  <script src="main.js"></script>
 </body>
 
 </html>
